--- a/style.css
+++ b/style.css
@@ -243,10 +243,13 @@ body {
     padding: 70px 0 30px;
 }
 
+.footer__content {
+    margin-bottom: 40px;
+}
+
 .footer__text,
 .footer__nav {
     float: left;
-    margin-bottom: 40px;
 }
 
 .footer__nav {
